# faas-example

./: .gitignore  package.json
lib/: index.js
native/: Cargo.toml  index.node
native/src/: lib.rs
