[package]
name = "thruster-x-express"
version = "0.1.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "faas_rust"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
