[package]
name = "thruster-x-express"
version = "0.1.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "faas_rust"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
hyper = "0.13"
neon = "0.3.3"
# thruster = { version = "0.9.0-alpha.3", features = ["thruster_error_handling", "hyper_server"]}
thruster = { path = "../../thruster/thruster", features = ["thruster_error_handling", "hyper_server"]}
tokio = { version = "0.2.6", features = ["rt-threaded"] }
